# ogc-na-tools

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: mkdocs.yml  python-publish.yml
docs/: examples.md  gen_ref_pages.py  index.md  jsonld-uplift.md  tutorials.md
examples/: index.html
jsonld-uplift/: index.html
ogc/: __init__.py
ogc/na/: __init__.py  annotate_schema.py  domain_config.py  download.py  ingest_json.py  profile.py  provenance.py  update_vocabs.py  util.py  validation.py
rdf/: domaincfg.shacl.ttl  domaincfg.ttl  domaincfg.vocab.ttl
reference/SUMMARY/: index.html
reference/ogc/: index.html
reference/ogc/na/: index.html
reference/ogc/na/_version/: index.html
reference/ogc/na/annotate_schema/: index.html
reference/ogc/na/domain_config/: index.html
reference/ogc/na/download/: index.html
reference/ogc/na/gsp/: index.html
reference/ogc/na/ingest_json/: index.html
reference/ogc/na/input_filters/: index.html
reference/ogc/na/input_filters/csv/: index.html
reference/ogc/na/input_filters/xml/: index.html
reference/ogc/na/models/: index.html
reference/ogc/na/profile/: index.html
reference/ogc/na/provenance/: index.html
reference/ogc/na/update_vocabs/: index.html
reference/ogc/na/util/: index.html
reference/ogc/na/validation/: index.html
search/: search_index.json
test/: domaincfg.ttl  test_annotate_schema.py  test_resolve_refs.py
test/data/: context-inner-nested-ref.jsonld  context-null-vocab.jsonld  context-outer-nested-ref.jsonld  headers.xlsx  no-headers.xlsx  resolve_refs_data_with_refs.json  resolve_refs_referenced_data.json  schema-nested-context-ref.yml  schema-null-vocab-builder.yml  schema-null-vocab.yml  two-sheets.xlsx
test/data/allof-inherited-binding/: collection-schema.yaml  feature-schema.yaml  naked-schema.yaml  root-schema.yaml
test/data/allof-sibling-binding/: collection-schema.yaml  feature-schema.yaml  naked-schema.yaml  root-schema.yaml
test/data/anchor-ref-inner-context/: context.jsonld  schema.yaml
test/data/binding-bubbling/: allof-no-binding-schema.yaml  root-schema.yaml
test/data/context-import/: base.jsonld  nested-import.jsonld  with-import.jsonld
test/data/context-import/sub/: child-with-import.jsonld
test/data/curie-property/: context.jsonld  schema-builder.yaml  schema.yaml
test/data/unannotated-ref-child/: child-schema.yaml  parent-schema.yaml  root-schema.yaml
tutorials/: index.html
