[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ogc.na"
authors = [
    { name="Rob Atkinson", email="ratkinson@ogc.org" },
    { name="Piotr Zaborowski", email="pzaborowski@ogc.org" },
    { name="Alejandro Villar", email="avillar@ogc.org" },
]
description = "OGC Naming Authority tools"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["dependencies", "version"]

[project.urls]
"Homepage" = "https://www.ogc.org/def-server"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ogc*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "ogc/na/_version.py"

[project.optional-dependencies]
dev = [
    "mkdocs>=1.4.2",
    "mkdocs-autorefs",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocs-pymdownx-material-extras",
    "mkdocs-section-index",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-markdownextradata-plugin"
]
